--- a/style.css
+++ b/style.css
@@ -15,3 +15,12 @@
   height: 100px;
   border: 4px solid black;
 }
+
+.square:not(:hover){
+  transition: all 2s;
+}
+
+.square:hover{
+  background-color: red;
+  transition: all 0s;
+}
