--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+#button-container{
+  display:flex;
+  justify-content: center;
+}
+
+#user-prompt-button{
+  background-color: green;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: larger;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
 .grid{
   display: flex;
   justify-content: center;
