--- a/style.css
+++ b/style.css
@@ -12,22 +12,35 @@
   margin-bottom: 10px;
 }
 
-.grid{
+body{
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
+}
+
+#grid{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 90vw;
+  height: 90vw;
 }
 
 .row{
-  padding: 2px 0;
   display: flex;
+  height: 100%;
+  width: 100%;
   justify-content: center;
-  gap: 2px;
 }
 
 .square{
-  width: 100px;
-  height: 100px;
-  border: 4px solid black;
+  flex: 1 1 auto;
+  aspect-ratio: 1 / 1;
+  width: 100%;
+  border: .1em solid black;
+  margin: .1%
 }
 
 .square:not(:hover){
